--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "4.0.0",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
     "@angular/core": "4.0.0",
@@ -30,11 +30,11 @@
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.0",
     "ts-helpers": "1.1.2",
-    "web-animations-js": "^2.3.1",
+    "web-animations-js": "^2.2.5",
     "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.2",
+    "@angular/cli": "^1.2.7",
     "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.5",
